2009-04-20  Ian Lance Taylor  <iant@google.com>

	* typeck.c (build_function_call_vec): New function.
	(cp_build_function_call): Only pass first parameter to
	objc_rewrite_function_call.
	(build_modify_expr): Add rhs_origtype parameter.  Change all
	callers.
	* decl.c (finish_decl): Add origtype parameter.  Change all
	callers.
	* semantics.c (finish_call_expr): Pass VEC to
	resolve_overloaded_builtin.

2009-04-20  Ian Lance Taylor  <iant@google.com>

	* cp-tree.h (base_access): Change typedef to int.
	* parser.c (cp_parser_omp_flush): Change 0 to OMP_CLAUSE_ERROR.
	(cp_parser_omp_threadprivate): Likewise.
	* pt.c (unify_pack_expansion): Add casts to enum type.

2009-04-19  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c/32061
	PR c++/36954
	* call.c (build_new_op): Save the original codes of operands
	before folding.

2009-04-18  Kazu Hirata  <kazu@codesourcery.com>

	* cp-tree.h: Remove the prototype for insert_block.
	* decl.c (insert_block): Remove.

2009-04-16  Ian Lance Taylor  <iant@google.com>

	* cp-tree.h (enum tsubst_flags): Rename from enum tsubst_flags_t.
	(tsubst_flags_t): Change typedef from enum type to int.

2009-04-16  Le-Chun Wu  <lcwu@google.com>

	* decl.c (check_initializer): Use TYPE_VECTOR_OPAQUE
	instead of targetm.vector_opaque_p.

2009-04-15  Le-Chun Wu  <lcwu@google.com>

	PR c++/39551
	* call.c (build_over_call): Set TREE_NO_WARNING on the
	compiler-generated INDIRECT_REF expression.
	* cvt.c (convert_to_void): Emit warning when stripping off
	INDIRECT_REF.

2009-04-14  Diego Novillo  <dnovillo@google.com>

	* parser.c (cp_parser_type_specifier_seq): Move call to
	invoke_plugin_callbacks ...
	(cp_parser_type_specifier_seq): ... here.

2009-04-14  Le-Chun Wu  <lcwu@google.com>

	* Make-lang.in: Modify dependencies of files including plugin.h.
	* decl.c (finish_function): Call invoke_plugin_callbacks.
	* parser.c (cp_parser_type_specifier): Call invoke_plugin_callbacks.

2009-04-14  Jason Merrill  <jason@redhat.com>

	PR c++/39763